--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "npm": "^7.21.0",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-material-ui-form-validator": "^2.1.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^2.1.0"
