--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "array-move": "^4.0.0",
     "chroma-js": "^2.1.2",
     "npm": "^7.21.0",
     "rc-slider": "^9.7.2",
