--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.2.1",
     "array-move": "^4.0.0",
     "chroma-js": "^2.1.2",
+    "emoji-mart": "^3.0.1",
     "npm": "^7.21.0",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
